--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18"
   },
