--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.6",
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.9.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "prisma": "^5.9.1",
